--- a/Contacts/Views/ContactsPage.xaml
+++ b/Contacts/Views/ContactsPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Contacts.Views.ContactsPage"
              Title="Contacts">
-    <VerticalStackLayout>
+    <VerticalStackLayout Spacing="10" Margin="10">
         <Label 
             Text="Welcome to contacts page"
             VerticalOptions="Center" 
