--- a/Contacts/Views/AddContactPage.xaml
+++ b/Contacts/Views/AddContactPage.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Contacts.Views.AddContactPage"
              Title="Add Contact">
-    <VerticalStackLayout>
+    <VerticalStackLayout Spacing="10" Margin="10">
         <Label 
             Text="ADD CONTACT PAGE"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+        <Button Text="Add Contact" Clicked="AddContactClicked"/>
     </VerticalStackLayout>
 </ContentPage>
