--- a/Contacts/AppShell.xaml
+++ b/Contacts/AppShell.xaml
@@ -3,13 +3,13 @@
     x:Class="Contacts.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Contacts.Views"
+    xmlns:view="clr-namespace:Contacts.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="Contacts">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:ContactsPage}"
+        ContentTemplate="{DataTemplate view:ContactsPage}"
         Route="ContactsPage" />
 
 </Shell>
