--- a/Contacts/Views/ContactsPage.xaml
+++ b/Contacts/Views/ContactsPage.xaml
@@ -3,13 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Contacts.Views.ContactsPage"
              Title="Contacts">
-    <VerticalStackLayout Spacing="10" Margin="10">
-        <Label 
-            Text="Welcome to contacts page"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <Button Text="Add Contact"
-                Clicked="AddContactClicked"/>
-        <Button Text="Edit Contact" Clicked="EditContactClicked"/>
-    </VerticalStackLayout>
+    <ListView x:Name="contactsList" Background="Transparent">
+        
+    </ListView>
 </ContentPage>
