--- a/Contacts/Views/ContactsPage.xaml
+++ b/Contacts/Views/ContactsPage.xaml
@@ -3,7 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Contacts.Views.ContactsPage"
              Title="Contacts">
-    <ListView x:Name="contactsList" Background="Transparent">
-        
+    <ListView x:Name="contactsList" Background="Transparent" RowHeight="75">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <TextCell Text="{Binding Name}" Detail="{Binding Email}"></TextCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
     </ListView>
 </ContentPage>
