--- a/Contacts/Views/EditContactPage.xaml
+++ b/Contacts/Views/EditContactPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Contacts.Views.EditContactPage"
              Title="Edit Contact">
-    <VerticalStackLayout Spacing="10" Margin="10">
+    <!--<VerticalStackLayout Spacing="10" Margin="10">
         <Label 
             x:Name="lblName"
             Text="EDIT CONTACT PAGE"
@@ -11,5 +11,34 @@
             HorizontalOptions="Center" />
 
         <Button Text="Update Contact" Clicked="UpdateContactClicked"/>
+    </VerticalStackLayout>-->
+    <VerticalStackLayout Spacing="10" Margin="20,20,20,0">
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
+                <Label Text="Name" VerticalOptions="Center" WidthRequest="60"></Label>
+                <Entry VerticalOptions="Center"></Entry>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
+                <Label Text="Email" VerticalOptions="Center" WidthRequest="60"></Label>
+                <Entry VerticalOptions="Center"></Entry>
+            </HorizontalStackLayout>
+        </Frame>
+        
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
+                <Label Text="Phone" VerticalOptions="Center" WidthRequest="60"></Label>
+                <Entry VerticalOptions="Center"></Entry>
+            </HorizontalStackLayout>
+        </Frame>
+
+        <Frame Padding="10,2">
+            <HorizontalStackLayout>
+                <Label Text="Address" VerticalOptions="Center" WidthRequest="60"></Label>
+                <Entry VerticalOptions="Center"></Entry>
+            </HorizontalStackLayout>
+        </Frame>
     </VerticalStackLayout>
 </ContentPage>
